    Occitan
  [25715] system() returns wrong errors when posix_spawn fails
  [25810] x32: Incorrect syscall entries with pointer, off_t and size_t
  [25896] Incorrect prctl
  [25902] Bad LOADARGS_N
  [25933] Off by one error in __strncmp_avx2
  [25966] Incorrect access of __x86_shared_non_temporal_threshold for x32
  [25976] nss_compat: internal_end*ent may clobber errno, hiding ERANGE

Security related changes:

  CVE-2020-10029: Trigonometric functions on x86 targets suffered from stack
  corruption when they were passed a pseudo-zero argument.  Reported by Guido
  Vranken / ForAllSecure Mayhem.

  CVE-2020-1751: A defect in the PowerPC backtrace function could cause an
  out-of-bounds write when executed in a signal frame context.

  CVE-2020-1752: A use-after-free vulnerability in the glob function when
  expanding ~user has been fixed.

  CVE-2020-6096: A signed comparison vulnerability in the ARMv7 memcpy and
  memmove functions has been fixed.  Discovered by Jason Royes and Samual
  Dytrych of the Cisco Security Assessment and Penetration Team (See
  TALOS-2020-1019).


Version 2.31

Major new features:

* The GNU C Library now supports a feature test macro _ISOC2X_SOURCE to
  enable features from the draft ISO C2X standard.  Only some features from
  this draft standard are supported by the GNU C Library, and as the draft
  is under active development, the set of features enabled by this macro is
  liable to change.  Features from C2X are also enabled by _GNU_SOURCE, or
  by compiling with "gcc -std=gnu2x".

* The <math.h> functions that round their results to a narrower type now
  have corresponding type-generic macros in <tgmath.h>, as defined in TS
  18661-1:2014 and TS 18661-3:2015 as amended by the resolution of
  Clarification Request 13 to TS 18661-3.

* The function pthread_clockjoin_np has been added, enabling join with a
  terminated thread with a specific clock.  It allows waiting against